--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "@vercel/analytics": "^1.0.1",
     "@vercel/og": "^0.5.7",
     "ai": "^2.1.6",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
+    "ethers": "^6.13.5",
     "focus-trap-react": "^10.1.1",
+    "lucide-react": "^0.475.0",
     "nanoid": "^4.0.2",
     "next": "13.4.10",
     "next-themes": "^0.2.1",
@@ -45,7 +48,9 @@
     "react-textarea-autosize": "^8.4.1",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+    "siwe": "^3.0.0",
+    "sonner": "^1.7.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
@@ -61,9 +66,9 @@
     "eslint-plugin-tailwindcss": "^3.12.0",
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
-    "tailwind-merge": "^1.12.0",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.2",
-    "tailwindcss-animate": "^1.0.5",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.1.3"
   }
 }
