--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clsx": "^1.2.1",
     "ethers": "^6.13.5",
     "focus-trap-react": "^10.1.1",
+    "llama-parse": "^0.1.0",
     "lucide-react": "^0.475.0",
     "nanoid": "^4.0.2",
     "next": "13.4.10",
