--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vercel/og": "^0.5.7",
     "ai": "^2.1.6",
     "axios": "^1.7.9",
+    "bufferutil": "^4.0.9",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "ethers": "^6.13.5",
@@ -52,7 +53,8 @@
     "remark-math": "^5.1.1",
     "server-only": "^0.0.1",
     "siwe": "^3.0.0",
-    "sonner": "^1.7.4"
+    "sonner": "^1.7.4",
+    "utf-8-validate": "^6.0.5"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
